update github tests